# kura

./: .gitignore  .typescape.yaml  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  checks.lisp  crate-hashes.json  flake.nix
.github/workflows/: kura-release.yml  release.yml
examples/: init.lisp  zen-opus.lisp
kura/: Cargo.toml
kura-agent/: Cargo.toml
kura-agent/src/: context.rs  lib.rs  loop_runner.rs  message.rs  session_store.rs  tests.rs
kura-check/: Cargo.toml
kura-check/src/: main.rs
kura-core/: Cargo.toml
kura-core/src/: agent.rs  keymap.rs  lib.rs  plugin.rs  provider.rs  session.rs  tests.rs  tool.rs
kura-dag/: Cargo.toml
kura-ghostty/: Cargo.toml
kura-ghostty/src/: detect.rs  kitty_graphics.rs  kitty_keyboard.rs  lib.rs  synced_output.rs  terminal.rs  tests.rs
kura-lattice/: Cargo.toml
kura-lattice/src/: autonomy.rs  classification.rs  guardrail.rs  lib.rs  safety.rs  tests.rs  trust.rs
kura-provider/: Cargo.toml
kura-provider/src/: adapter.rs  lib.rs  openai_compat.rs  router.rs  tests.rs  zen.rs
kura-run/: Cargo.toml
kura-run/src/: dag.rs  executor.rs  lib.rs  main.rs  parser.rs  state.rs
kura-run/tests/: dispatcher_registration.rs
kura-tool/: Cargo.toml
kura-tool/src/: executor.rs  file_ops.rs  lib.rs  mcp_bridge.rs  search.rs  shell.rs  tests.rs
kura-tui/: Cargo.toml
kura-tui/src/: app.rs  components.rs  event.rs  layout.rs  lib.rs  pane.rs  render.rs  tests.rs  theme.rs
kura-tui/src/components/: conversation.rs  help_overlay.rs  input_bar.rs  status_bar.rs  tool_approval.rs
kura/src/: main.rs
module/: default.nix
