[package]
name = "kura-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Kura domain types — ProviderSpec, SessionSpec, ToolSpec, PluginSpec, KeymapSpec, AgentSpec via TataraDomain"

[dependencies]
tatara-lisp        = { workspace = true }
tatara-lisp-derive = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
blake3       = { workspace = true }
hex          = { workspace = true }
thiserror    = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

[lints]
workspace = true
