[package]
name = "kura-lattice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Kura lattice proofs — ProviderTrust, GuardrailLevel, AgentAutonomy, ToolSafety composition algebra"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
